# vaste

./: Cargo.toml  justfile
backend/: Cargo.toml  Config.example.toml
backend/migrations/: 00000001_create_users.sql  00000002_create_workspaces.sql  00000003_create_sessions.sql  00000004_create_nodes.sql
backend/src/: TODO.md  api_doc.rs  config.rs  error.rs  errors.rs  lib.rs  main.rs
backend/src/agents/: mod.rs
backend/src/auth/: errors.rs  extractors.rs  mod.rs  models.rs  queries.rs  routers.rs  services.rs
backend/src/nodes/: errors.rs  mod.rs  models.rs  queries.rs  routers.rs  schemas.rs  services.rs
backend/src/users/: errors.rs  mod.rs  models.rs  queries.rs  routers.rs  schemas.rs  services.rs  validation.rs
backend/src/workspaces/: errors.rs  mod.rs  models.rs  queries.rs  routers.rs  schemas.rs  services.rs
backend/tests/: auth.rs  nodes.rs  users.rs  workspaces.rs
backend/tests/common/: mod.rs
common/: Cargo.toml
common/src/: auth.rs  lib.rs
common/src/api/: mod.rs  nodes.rs  users.rs  workspaces.rs
