[package]
name = "backend"
version = "0.1.0"
edition = "2024"


[dependencies]
common = { path = "../common" }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = "5.5.0"
utoipa-swagger-ui = {version = "9.0.2", features = ["axum"]}
uuid = { version = "1.23.3", features = ["serde", "v7"] }
toml = "1.1.2"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", default-features = false, features = ["util"] }
