[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5.5.0", features = ["uuid", "chrono"] }
uuid = { version = "1.23.3", features = ["serde"] }
